# Vea

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  STRUCTURE.md  TEST_PLAN.md  TEST_SCRIPT.md  cleanup_plugin_tmp.sh  go.mod  go.sum  main.go  plan.md  pyproject.toml  resolvectl_linux.go  resolvectl_other.go
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  release.yml  test.yml
.serena/: project.yml
api/: openapi.yaml  versioning.md
app/: database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  configs.py  geo.py  nodes.py  traffic.py
app/services/: __init__.py  config_service.py  geo_service.py  metrics.py  node_service.py  traffic_service.py
app/utils/: importer.py
backend/api/: components_test.go  frouter_copy_test.go  frouter_meta_test.go  graph_test.go  logs.go  (+5 more)
docs/: ARCHITECTURE_V2.md  CHANGES.md  RELEASING.md  SDK_AND_BUILD_SYSTEM.md  SDK_GUIDE.md  SING_BOX_INTEGRATION.md  THEMES.md  api.md
electron/: README.md  electron-builder.yml  main.js  package.json  vite.config.js
frontend/: .gitignore  README.md  electron-builder.yml  main.js  package-lock.json  package.json  preload.js  settings-schema.js  theme_manager.js
helloagents/: CHANGELOG.md  INDEX.md  context.md  project.md
scripts/: com.veaproxy.vea.policy  fix-perms.sh  install-linux-admin.sh  package-linux.sh  package-macos.sh  package-windows.ps1  uninstall-linux-admin.sh  vea-admin  vea-root.desktop
sdk/: README.md  package-lock.json  package.json  rollup.config.js
web/: index.html
(+361 files in other folders)
